--- a/src/components/components.scss
+++ b/src/components/components.scss
@@ -3,7 +3,7 @@
 }
 
 .sections-title {
-    @apply text-2xl xs:text-5xl hd+:text-[4rem] leading-[120%] xs:leading-none font-medium text-text-primary;
+    @apply text-2xl xs:text-5xl hd+:text-[4rem] font-clash hd+:leading-[104%] font-medium text-text-primary;
 }
 
 .button {
