--- a/src/assets/styles/fonts.css
+++ b/src/assets/styles/fonts.css
@@ -1,38 +1,38 @@
 @font-face {
-    font-family: 'Inter';
-    src: url('../fonts/Inter-Light.woff2');
+    font-family: 'ClashGrotesk';
+    src: url('../fonts/ClashGrotesk-Bold.woff2');
     font-weight: 300;
     font-style: normal;
     font-display: swap;
 }
 
 @font-face {
-    font-family: 'Inter';
-    src: url('../fonts/Inter-Regular.woff2');
+    font-family: 'ClashGrotesk';
+    src: url('../fonts/ClashGrotesk-Regular.woff2');
     font-weight: 400;
     font-style: normal;
     font-display: swap;
 }
 
 @font-face {
-    font-family: 'Inter';
-    src: url('../fonts/Inter-Medium.woff2');
+    font-family: 'ClashGrotesk';
+    src: url('../fonts/ClashGrotesk-Medium.woff2');
     font-weight: 500;
     font-style: normal;
     font-display: swap;
 }
 
 @font-face {
-    font-family: 'Inter';
-    src: url('../fonts/Inter-SemiBold.woff2');
+    font-family: 'ClashGrotesk';
+    src: url('../fonts/ClashGrotesk-Semibold.woff2');
     font-weight: 600;
     font-style: normal;
     font-display: swap;
 }
 
 @font-face {
-    font-family: 'Inter';
-    src: url('../fonts/Inter-Bold.woff2');
+    font-family: 'ClashGrotesk';
+    src: url('../fonts/ClashGrotesk-Bold.woff2');
     font-weight: 700;
     font-style: normal;
     font-display: swap;
