--- a/src/components/sections/JoinSection/JoinSection.scss
+++ b/src/components/sections/JoinSection/JoinSection.scss
@@ -35,7 +35,7 @@
     }
 
     &__content-secondary {
-        @apply relative mt-10 xs:mt-80 hd+:mt-[43.75rem] pb-44 xs:pb-60 hd+:pb-[30rem] opacity-0;
+        @apply relative mt-10 xs:mt-80 hd+:mt-[43.75rem] pb-44 xs:pb-[23rem] hd+:pb-[40rem] opacity-0;
     }
 
     &__title-secondary {
