--- a/src/components/sections/MainHero/MainHero.scss
+++ b/src/components/sections/MainHero/MainHero.scss
@@ -52,7 +52,7 @@
     }
 
     &__subtitle {
-        @apply mt-4 xs:mt-[2.375rem] text-md leading-[120%] xs:text-2xl xs:leading-none text-text-primary;
+        @apply mt-4 xs:mt-[2.375rem] text-md leading-[120%] xs:text-2xl text-text-primary;
     }
 
     &__actions {
